--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:id="@+id/login_layout"
+        android:visibility="gone">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -109,11 +111,14 @@
                 android:textStyle="italic"/>
         </RelativeLayout>
     </LinearLayout>
+    <include
+        android:id="@+id/include_layout"
+        layout="@layout/expand_bot_layout"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black"
-        android:alpha="0.4"
+        android:alpha="0.7"
         android:id="@+id/loading_layout">
         <ImageView
             android:layout_width="80dp"
